--- a/src02_latex/latex_002_article_1998.latex
+++ b/src02_latex/latex_002_article_1998.latex
@@ -2,6 +2,17 @@
 \title{Cartesian closed categories and the price of eggs}
 \author{Jane Doe}
 \date{September 1994}
+
+\usepackage{hyperref}
+\hypersetup{
+  pdfinfo={
+    Author={Tizio Sempronio},
+    Title={Creating a PDF document using PDFLaTeX},
+    CreationDate={D:20040502195600},
+    ModDate={...},
+    Keywords={PDF;LaTeX},
+  }
+}
 \begin{document}
    \maketitle
    Hello world!
