--- a/src03_text_to_resume/deng_ya_nuo_2021_0215_2147pm.tex
+++ b/src03_text_to_resume/deng_ya_nuo_2021_0215_2147pm.tex
@@ -7,7 +7,44 @@
 \voffset -0.6 in  % 1 - 0.4
 \hoffset -0.6 in  % 1 - 0.4
 
-Yanuo Deng (James)
+\parindent = 0 pt
+\emergencystretch = 800 em
+%\tolerance=10000
+
+
+\font\FFcmb=      cmb10            at 24pt
+\font\FFcmbsy=    cmbsy10          at 24pt
+\font\FFcmbx=     cmbx10           at 24pt
+\font\FFcmbxsl=   cmbxsl10         at 24pt
+\font\FFcmbxti=   cmbxti10         at 24pt
+\font\FFcmcsc=    cmcsc10          at 24pt
+\font\FFcmdunh=   cmdunh10         at 24pt
+\font\FFcmex=     cmex10           at 24pt
+\font\FFcmff=     cmff10           at 24pt
+\font\FFcmfi=     cmfi10           at 24pt
+\font\FFcmitt=    cmitt10          at 24pt
+\font\FFcmmi=     cmmi10           at 24pt
+\font\FFcmmib=    cmmib10          at 24pt
+\font\FFcmr=      cmr10            at 24pt
+\font\FFcmsl=     cmsl10           at 24pt
+\font\FFcmsltt=   cmsltt10         at 24pt
+\font\FFcmss=     cmss10           at 24pt
+\font\FFcmssbx=   cmssbx10         at 24pt
+\font\FFcmssdc=   cmssdc10         at 24pt
+\font\FFcmssi=    cmssi10          at 24pt
+\font\FFcmsy=     cmsy10           at 24pt
+\font\FFcmtcsc=   cmtcsc10         at 24pt
+\font\FFcmtex=    cmtex10          at 24pt
+\font\FFcmti=     cmti10           at 24pt
+\font\FFcmtt=     cmtt10           at 24pt
+\font\FFcmu=      cmu10            at 24pt
+\font\FFcmvtt=    cmvtt10          at 24pt
+
+
+\centerline{ \FFcmb
+%Yanuo Deng (James)
+}
+
 1565 Cress Way, Olivehurst,CA,95961
 (408)444-5520
 deng.ya.nuo@gmail.com
@@ -62,7 +99,33 @@ Certifications
 ---
 Electronics Engineer Certification, Foshan city, Aug 2008
 
-jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk
+jjjjkkkjjjjkkkjjjjkkkjjjjkkkjjjjkkkjjjjkkkjjjjkkkjjjjkkkjjjjkkkjjjjkkkjjjjkkkjjjjkkkjj
+jjkkkjjjjkkkjjjjkkkjjjjkkkjjjjkkkjjjjkkkjjjjkkkjjjjkkkjjjjkkkjjjjkkkjjjjkkkjjjjkkkjjjjkkk
+
+%\tolerance = 4
+%\pretolerance = 4
+ajjjjjjjjjkkkkkkkkkb
+bjjjjjjjjjkkkkkkkkkb
+cjjjjjjjjjkkkkkkkkkb
+djjjjjjjjjkkkkkkkkkb
+ejjjjjjjjjkkkkkkkkkb
+fjjjjjjjjjkkkkkkkkkb
+gjjjjjjjjjkkkkkkkkkb
+hjjjjjjjjjkkkkkkkkkb
+ajjjjjjjjjkkkkkkkkkb
+bjjjjjjjjjkkkkkkkkkb
+cjjjjjjjjjkkkkkkkkkb
+djjjjjjjjjkkkkkkkkkb
+ejjjjjjjjjkkkkkkkkkb
+fjjjjjjjjjkkkkkkkkkb
+gjjjjjjjjjkkkkkkkkkb
+hjjjjjjjjjkkkkkkkkkb
+
+jjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk
+
+jjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk
+
+jkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk
 
 jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk
 
@@ -98,10 +161,32 @@ jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk 
 
 jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk
 
-jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk
-
-jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk
-
-jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk
+\par \FFcmb      Yanuo Deng (James)  a:FFcmb    
+%\par \FFcmbsy    Yanuo Deng (James)  b:FFcmbsy  
+\par \FFcmbx     Yanuo Deng (James)  c:FFcmbx   
+\par \FFcmbxsl   Yanuo Deng (James)  d:FFcmbxsl 
+\par \FFcmbxti   Yanuo Deng (James)  e:FFcmbxti 
+\par \FFcmcsc    Yanuo Deng (James)  f:FFcmcsc  
+\par \FFcmdunh   Yanuo Deng (James)  g:FFcmdunh 
+%\par \FFcmex     Yanuo Deng (James)  h:FFcmex   
+%\par \FFcmff     Yanuo Deng (James)  i:FFcmff   
+%\par \FFcmfi     Yanuo Deng (James)  j:FFcmfi   
+\par \FFcmitt    Yanuo Deng (James)  k:FFcmitt  
+%\par \FFcmmi     Yanuo Deng (James)  l:FFcmmi   
+%\par \FFcmmib    Yanuo Deng (James)  m:FFcmmib  
+\par \FFcmr      Yanuo Deng (James)  n:FFcmr    
+\par \FFcmsl     Yanuo Deng (James)  o:FFcmsl   
+\par \FFcmsltt   Yanuo Deng (James)  p:FFcmsltt 
+\par \FFcmss     Yanuo Deng (James)  q:FFcmss   
+\par \FFcmssbx   Yanuo Deng (James)  r:FFcmssbx 
+\par \FFcmssdc   Yanuo Deng (James)  s:FFcmssdc 
+\par \FFcmssi    Yanuo Deng (James)  t:FFcmssi  
+%\par \FFcmsy     Yanuo Deng (James)  u:FFcmsy   
+\par \FFcmtcsc   Yanuo Deng (James)  v:FFcmtcsc 
+\par \FFcmtex    Yanuo Deng (James)  w:FFcmtex  
+\par \FFcmti     Yanuo Deng (James)  x:FFcmti   
+\par \FFcmtt     Yanuo Deng (James)  y:FFcmtt   
+\par \FFcmu      Yanuo Deng (James)  z:FFcmu    
+\par \FFcmvtt    Yanuo Deng (James)  a:FFcmvtt  
 
 \bye
