--- a/src03_text_to_resume/deng_ya_nuo_2021_0215_2147pm.tex
+++ b/src03_text_to_resume/deng_ya_nuo_2021_0215_2147pm.tex
@@ -40,15 +40,23 @@
 \font\FFcmu=      cmu10            at 24pt
 \font\FFcmvtt=    cmvtt10          at 24pt
 
+\font\FFaa=      cmb10            at 24pt
+\font\FFbb=      cmr10            at 8.5pt
 
-\centerline{ \FFcmb
+\centerline{ \FFaa
 Yanuo Deng (James)
 }
 
+\centerline{ \FFbb
 1565 Cress Way, Olivehurst,CA,95961
+*
 (408)444-5520
+*
 deng.ya.nuo@gmail.com
+*
 Cantonese
+}
+
 
 CAREER OBJECTIVE
 ---
