--- a/src03_text_to_resume/deng_ya_nuo_2021_0215_2147pm.tex
+++ b/src03_text_to_resume/deng_ya_nuo_2021_0215_2147pm.tex
@@ -58,7 +58,10 @@ Cantonese
 }
 
 
+{ \FFbb
 CAREER OBJECTIVE
+}
+
 ---
 Focused professional with 15+ years of experience and a proven knowledge of embedded system(linux/RTOS), and digital \& analogy circuit design. Amiing to leverage my skills to successfully fill the Integrated Circuit Engineer, Software Engineer, or Network Security Engineer role at your company.
 
