--- a/src03_text_to_resume/deng_ya_nuo_2021_0215_2147pm.tex
+++ b/src03_text_to_resume/deng_ya_nuo_2021_0215_2147pm.tex
@@ -42,6 +42,7 @@
 
 \font\FFaa=      cmb10            at 24pt
 \font\FFbb=      cmr10            at 8.5pt
+\font\FFcc=      cmb10            at 12pt
 
 \centerline{ \FFaa
 Yanuo Deng (James)
@@ -57,8 +58,9 @@ deng.ya.nuo@gmail.com
 Cantonese
 }
 
+\par \null 
 
-{ \FFbb
+{ \FFcc
 CAREER OBJECTIVE
 }
 
