--- a/src03_text_to_resume/deng_ya_nuo_2021_0215_2147pm.tex
+++ b/src03_text_to_resume/deng_ya_nuo_2021_0215_2147pm.tex
@@ -43,6 +43,7 @@
 \font\FFaa=      cmb10            at 24pt
 \font\FFbb=      cmr10            at 8.5pt
 \font\FFcc=      cmb10            at 12pt
+\font\FFdd=      cmb10            at  5pt
 
 \centerline{ \FFaa
 Yanuo Deng (James)
@@ -58,7 +59,7 @@ deng.ya.nuo@gmail.com
 Cantonese
 }
 
-\par \null 
+{ \FFdd \par \null }
 
 { \FFcc
 CAREER OBJECTIVE
