--- a/src03_text_to_resume/deng_ya_nuo_2021_0215_2147pm.tex
+++ b/src03_text_to_resume/deng_ya_nuo_2021_0215_2147pm.tex
@@ -10,40 +10,14 @@
 \parindent = 0 pt
 \emergencystretch = 800 em
 %\tolerance=10000
+\baselineskip = 16pt
 
-
-\font\FFcmb=      cmb10            at 24pt
-\font\FFcmbsy=    cmbsy10          at 24pt
-\font\FFcmbx=     cmbx10           at 24pt
-\font\FFcmbxsl=   cmbxsl10         at 24pt
-\font\FFcmbxti=   cmbxti10         at 24pt
-\font\FFcmcsc=    cmcsc10          at 24pt
-\font\FFcmdunh=   cmdunh10         at 24pt
-\font\FFcmex=     cmex10           at 24pt
-\font\FFcmff=     cmff10           at 24pt
-\font\FFcmfi=     cmfi10           at 24pt
-\font\FFcmitt=    cmitt10          at 24pt
-\font\FFcmmi=     cmmi10           at 24pt
-\font\FFcmmib=    cmmib10          at 24pt
-\font\FFcmr=      cmr10            at 24pt
-\font\FFcmsl=     cmsl10           at 24pt
-\font\FFcmsltt=   cmsltt10         at 24pt
-\font\FFcmss=     cmss10           at 24pt
-\font\FFcmssbx=   cmssbx10         at 24pt
-\font\FFcmssdc=   cmssdc10         at 24pt
-\font\FFcmssi=    cmssi10          at 24pt
-\font\FFcmsy=     cmsy10           at 24pt
-\font\FFcmtcsc=   cmtcsc10         at 24pt
-\font\FFcmtex=    cmtex10          at 24pt
-\font\FFcmti=     cmti10           at 24pt
-\font\FFcmtt=     cmtt10           at 24pt
-\font\FFcmu=      cmu10            at 24pt
-\font\FFcmvtt=    cmvtt10          at 24pt
 
 \font\FFaa=      cmb10            at 24pt
 \font\FFbb=      cmr10            at 8.5pt
 \font\FFcc=      cmb10            at 12pt
-\font\FFdd=      cmb10            at  5pt
+\font\FFdd=      cmb10            at 12pt
+\font\FFee=      cmti10           at 10pt
 
 \centerline{ \FFaa
 Yanuo Deng (James)
@@ -59,150 +33,128 @@ deng.ya.nuo@gmail.com
 Cantonese
 }
 
-{ \FFdd \par \null }
-
-{ \FFcc
+{ \medbreak } { \FFcc
 CAREER OBJECTIVE
 }
 
-{\par\noindent\rule{\textwidth}{0.4pt}}
+{ \smallbreak } {\par\noindent\hrule} { \smallbreak }
 
----
 Focused professional with 15+ years of experience and a proven knowledge of embedded system(linux/RTOS), and digital \& analogy circuit design. Amiing to leverage my skills to successfully fill the Integrated Circuit Engineer, Software Engineer, or Network Security Engineer role at your company.
 
+{ \medbreak } { \FFcc
 EXPERIENCE
----
+}
+{ \smallbreak } {\par\noindent\hrule} { \smallbreak }
+
+{ \medbreak } { \FFdd
 C-MATRIXTECH CO.LTD., Zhuhai, Guangdong, 3 person R\&D/6
+}
+
+{ \FFee
 Integrated Circuit Designer, Dec 2017 - Feb 2019
+}
+
+{ \parindent = 1 em \item{*} 
  Verilog coding, FPGA simulation and debug for self-powered SOC chip. 
+}
+
+{ \parindent = 1 em \item{*} 
  MCU debug; Port C-language from Assembly for the MCU; Analog circuit design.
+}
+{ \parindent = 1 em \item{*} 
  Achieved self-powered MCU SOC used on iPhone data cables; Mass production 10 per month.
+}
 
+{ \medbreak } { \FFdd
 VIOMI CO.LTD., Foshan, Guangdong, 3 person R\&D/200
+}
+
+{ \FFee
 Software (Firmware) Engineer, May 2017 - Oct 2017
+}
+
+{ \parindent = 1 em \item{*} 
  Linux driver for the wifi chip; Speech Recognition App for Linux.
+ }
+{ \parindent = 1 em \item{*} 
  Achieved smart wireless Speech Recognition module ; Mass production 3k per month.
+ }
 
+{ \medbreak } { \FFdd
 BLUEWAY CO.LTD., Huizhou, Guangdong, 5 person R\&D/2500
+}
+
+{ \FFee
 Software (Firmware) Engineer, May 2016 - Apr 2017
+}
+{ \parindent = 1 em \item{*} 
  FreeRTOS system migration for the embedded board, target for electric mowers.
+ }
 
+{ \medbreak } { \FFdd
 ADON CO.LTD., Foshan, Guangdong, 3 person R\&D/350
+}
+
+{ \FFee
 Software (Firmware) Engineer, Oct 2013 - Dec 2015
+}
+{ \parindent = 1 em \item{*} 
  Linux driver \& app for the Homepod (wifi speaker/charger for iPhone); Mass production, 3k per month.
+ }
 
+{ \medbreak } { \FFdd
 SKYIT SOFTWARE CO.LTD., Shunde, Guangdong, 5 person R\&D/500
+}
+
+{ \FFee
 Software Engineer, Dec 2011 - Jul 2013
+}
+{ \parindent = 1 em \item{*} 
  Windows Client App by C\#; Data API by C for the first order a meal App in China
+ }
 
+{ \medbreak } { \FFdd
 VBRIDGE MICROSYSTEM INC, San Jose, CA, 5 person R\&D/12
+}
+
+{ \FFee
 Digital Integrated Circuit Engineer, Apr 2005 - May 2008
+}
+{ \parindent = 1 em \item{*} 
  AES, DES, 3DES, MD5, SHA1, CRC : ipcores for the security engineer. 
+ }
+{ \parindent = 1 em \item{*} 
  5 bit MCU for the dual-MIPS SOC chip
+ }
+{ \parindent = 1 em \item{*} 
  All IP cores include specification, testbench, RTL; All IP cores verified by the SOC Chip
+ }
 
+{ \medbreak } { \FFdd
 EDUCATION
----
+}
+{ \smallbreak } {\par\noindent\hrule} { \smallbreak }
 XI'AN university of technology, Xi'an city, Shannxi, China
+
+{ \FFee
 Master of Science (M.S.) Microelectronics \& Solidstate Electronics (Apr 2005)
+}
 
+{ \medbreak } { \FFdd
 ADDITIONAL SKILLS
----
+}
+{ \smallbreak } {\par\noindent\hrule} { \smallbreak }
+{ \parindent = 1 em \item{*} 
  C, Verilog, Vim, Bash, Perl, Go-language, Gnumake, git
+ }
+{ \parindent = 1 em \item{*} 
  Linux / FreeRTOS driver
+ }
 
+{ \medbreak } { \FFdd
 Certifications
----
+}
+{ \smallbreak } {\par\noindent\hrule} { \smallbreak }
 Electronics Engineer Certification, Foshan city, Aug 2008
-
-jjjjkkkjjjjkkkjjjjkkkjjjjkkkjjjjkkkjjjjkkkjjjjkkkjjjjkkkjjjjkkkjjjjkkkjjjjkkkjjjjkkkjj
-jjkkkjjjjkkkjjjjkkkjjjjkkkjjjjkkkjjjjkkkjjjjkkkjjjjkkkjjjjkkkjjjjkkkjjjjkkkjjjjkkkjjjjkkk
-
-%\tolerance = 4
-%\pretolerance = 4
-ajjjjjjjjjkkkkkkkkkb
-bjjjjjjjjjkkkkkkkkkb
-cjjjjjjjjjkkkkkkkkkb
-djjjjjjjjjkkkkkkkkkb
-ejjjjjjjjjkkkkkkkkkb
-fjjjjjjjjjkkkkkkkkkb
-gjjjjjjjjjkkkkkkkkkb
-hjjjjjjjjjkkkkkkkkkb
-ajjjjjjjjjkkkkkkkkkb
-bjjjjjjjjjkkkkkkkkkb
-cjjjjjjjjjkkkkkkkkkb
-djjjjjjjjjkkkkkkkkkb
-ejjjjjjjjjkkkkkkkkkb
-fjjjjjjjjjkkkkkkkkkb
-gjjjjjjjjjkkkkkkkkkb
-hjjjjjjjjjkkkkkkkkkb
-
-jjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk
-
-jjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk
-
-jkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk
-
-jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk
-
-jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk
-
-jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk
-
-jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk
-
-jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk
-
-jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk
-
-jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk
-
-jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk
-
-jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk
-
-jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk
-
-jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk
-
-jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk
-
-jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk
-
-jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk
-
-jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk
-
-jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk
-
-jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk jjjjkkk
-
-\par \FFcmb      Yanuo Deng (James)  a:FFcmb    
-%\par \FFcmbsy    Yanuo Deng (James)  b:FFcmbsy  
-\par \FFcmbx     Yanuo Deng (James)  c:FFcmbx   
-\par \FFcmbxsl   Yanuo Deng (James)  d:FFcmbxsl 
-\par \FFcmbxti   Yanuo Deng (James)  e:FFcmbxti 
-\par \FFcmcsc    Yanuo Deng (James)  f:FFcmcsc  
-\par \FFcmdunh   Yanuo Deng (James)  g:FFcmdunh 
-%\par \FFcmex     Yanuo Deng (James)  h:FFcmex   
-%\par \FFcmff     Yanuo Deng (James)  i:FFcmff   
-%\par \FFcmfi     Yanuo Deng (James)  j:FFcmfi   
-\par \FFcmitt    Yanuo Deng (James)  k:FFcmitt  
-%\par \FFcmmi     Yanuo Deng (James)  l:FFcmmi   
-%\par \FFcmmib    Yanuo Deng (James)  m:FFcmmib  
-\par \FFcmr      Yanuo Deng (James)  n:FFcmr    
-\par \FFcmsl     Yanuo Deng (James)  o:FFcmsl   
-\par \FFcmsltt   Yanuo Deng (James)  p:FFcmsltt 
-\par \FFcmss     Yanuo Deng (James)  q:FFcmss   
-\par \FFcmssbx   Yanuo Deng (James)  r:FFcmssbx 
-\par \FFcmssdc   Yanuo Deng (James)  s:FFcmssdc 
-\par \FFcmssi    Yanuo Deng (James)  t:FFcmssi  
-%\par \FFcmsy     Yanuo Deng (James)  u:FFcmsy   
-\par \FFcmtcsc   Yanuo Deng (James)  v:FFcmtcsc 
-\par \FFcmtex    Yanuo Deng (James)  w:FFcmtex  
-\par \FFcmti     Yanuo Deng (James)  x:FFcmti   
-\par \FFcmtt     Yanuo Deng (James)  y:FFcmtt   
-\par \FFcmu      Yanuo Deng (James)  z:FFcmu    
-\par \FFcmvtt    Yanuo Deng (James)  a:FFcmvtt  
 
 \bye
