--- a/src03_text_to_resume/deng_ya_nuo_2021_0215_2147pm.tex
+++ b/src03_text_to_resume/deng_ya_nuo_2021_0215_2147pm.tex
@@ -1,11 +1,18 @@
-\special{papersize=8.5in,11.5in}
-\nopagenumbers
+% \special{papersize=8.5in,11.5in}
+% % 0.4 padding 
+% \hsize 7.7 in     % 8.5  - 0.4 * 2
+% \vsize 10.7 in    % 11.5 - 0.4 * 2
+% \voffset -0.6 in  % 1 - 0.4
+% \hoffset -0.6 in  % 1 - 0.4
 
+\hsize 6.9 in     % 8.5  - 0.8 * 2
+\vsize 9.9 in     % 11.5 - 0.8 * 2
+\special{papersize=8.5in,11.5in}
 % 0.4 padding 
-\hsize 7.7 in     % 8.5  - 0.4 * 2
-\vsize 10.7 in    % 11.5 - 0.4 * 2
-\voffset -0.6 in  % 1 - 0.4
-\hoffset -0.6 in  % 1 - 0.4
+\voffset -0.2 in  % 1 - 0.8
+\hoffset -0.2 in  % 1 - 0.8
+
+\nopagenumbers
 
 \parindent = 0 pt
 \emergencystretch = 800 em
@@ -15,9 +22,12 @@
 
 \font\FFaa=      cmb10            at 24pt
 \font\FFbb=      cmr10            at 8.5pt
-\font\FFcc=      cmb10            at 12pt
-\font\FFdd=      cmb10            at 12pt
-\font\FFee=      cmti10           at 10pt
+\font\FFcc=      cmb10            at 13pt
+\font\FFdd=      cmb10            at 13pt
+\font\FFee=      cmti10           at 13pt
+
+
+\bigbreak
 
 \centerline{ \FFaa
 Yanuo Deng (James)
