--- a/src03_text_to_resume/deng_ya_nuo_2021_0215_2147pm.tex
+++ b/src03_text_to_resume/deng_ya_nuo_2021_0215_2147pm.tex
@@ -49,7 +49,7 @@ CAREER OBJECTIVE
 
 { \smallbreak } {\par\noindent\hrule} { \smallbreak }
 
-Focused professional with 15+ years of experience and a proven knowledge of embedded system(linux/RTOS), and digital \& analogy circuit design. Amiing to leverage my skills to successfully fill the Integrated Circuit Engineer, Software Engineer, or Network Security Engineer role at your company.
+Focused professional with 15+ years of experience and a proven knowledge of embedded system(linux/RTOS), and digital \& analogy circuit design. Aming to leverage my skills to successfully fill the Integrated Circuit Engineer, Software Engineer, or Network Security Engineer.
 
 { \medbreak } { \FFcc
 EXPERIENCE
@@ -57,7 +57,7 @@ EXPERIENCE
 { \smallbreak } {\par\noindent\hrule} { \smallbreak }
 
 { \medbreak } { \FFdd
-C-MATRIXTECH CO.LTD., Zhuhai, Guangdong, 3 person R\&D/6
+C-MATRIXTECH CO.LTD., Zhuhai, China, 3 person R\&D/6
 }
 
 { \FFee
@@ -76,7 +76,7 @@ Integrated Circuit Designer, Dec 2017 - Feb 2019
 }
 
 { \medbreak } { \FFdd
-VIOMI CO.LTD., Foshan, Guangdong, 3 person R\&D/200
+VIOMI CO.LTD., Foshan, China, 3 person R\&D/200
 }
 
 { \FFee
@@ -91,7 +91,7 @@ Software (Firmware) Engineer, May 2017 - Oct 2017
  }
 
 { \medbreak } { \FFdd
-BLUEWAY CO.LTD., Huizhou, Guangdong, 5 person R\&D/2500
+BLUEWAY CO.LTD., Huizhou, China, 5 person R\&D/2500
 }
 
 { \FFee
@@ -102,7 +102,7 @@ Software (Firmware) Engineer, May 2016 - Apr 2017
  }
 
 { \medbreak } { \FFdd
-ADON CO.LTD., Foshan, Guangdong, 3 person R\&D/350
+ADON CO.LTD., Foshan, China, 3 person R\&D/350
 }
 
 { \FFee
@@ -113,7 +113,7 @@ Software (Firmware) Engineer, Oct 2013 - Dec 2015
  }
 
 { \medbreak } { \FFdd
-SKYIT SOFTWARE CO.LTD., Shunde, Guangdong, 5 person R\&D/500
+SKYIT SOFTWARE CO.LTD., Shunde, China, 5 person R\&D/500
 }
 
 { \FFee
@@ -131,7 +131,7 @@ VBRIDGE MICROSYSTEM INC, San Jose, CA, 5 person R\&D/12
 Digital Integrated Circuit Engineer, Apr 2005 - May 2008
 }
 { \parindent = 1 em \item{*} 
- AES, DES, 3DES, MD5, SHA1, CRC : ipcores for the security engineer. 
+ AES, DES, 3DES, MD5, SHA1, CRC : IP cores for the security engineer. 
  }
 { \parindent = 1 em \item{*} 
  5 bit MCU for the dual-MIPS SOC chip
