--- a/src03_text_to_resume/deng_ya_nuo_resume_2021_0215_2147pm.tex
+++ b/src03_text_to_resume/deng_ya_nuo_resume_2021_0215_2147pm.tex
@@ -1,16 +1,16 @@
-% \special{papersize=8.5in,11.5in}
-% % 0.4 padding 
-% \hsize 7.7 in     % 8.5  - 0.4 * 2
-% \vsize 10.7 in    % 11.5 - 0.4 * 2
-% \voffset -0.6 in  % 1 - 0.4
-% \hoffset -0.6 in  % 1 - 0.4
-
-\hsize 6.9 in     % 8.5  - 0.8 * 2
-\vsize 9.9 in     % 11.5 - 0.8 * 2
 \special{papersize=8.5in,11.5in}
 % 0.4 padding 
-\voffset -0.2 in  % 1 - 0.8
-\hoffset -0.2 in  % 1 - 0.8
+\hsize 7.7 in     % 8.5  - 0.4 * 2
+\vsize 10.7 in    % 11.5 - 0.4 * 2
+\voffset -0.6 in  % 1 - 0.4
+\hoffset -0.6 in  % 1 - 0.4
+
+% \hsize 6.9 in     % 8.5  - 0.8 * 2
+% \vsize 9.9 in     % 11.5 - 0.8 * 2
+% \special{papersize=8.5in,11.5in}
+% % 0.4 padding 
+% \voffset -0.2 in  % 1 - 0.8
+% \hoffset -0.2 in  % 1 - 0.8
 
 \nopagenumbers
 
@@ -30,7 +30,7 @@
 \bigbreak
 
 \centerline{ \FFaa
-Yanuo Deng (James)
+Resume of Yanuo Deng (James)
 }
 
 \centerline{ \FFbb
@@ -166,5 +166,12 @@ Certifications
 }
 { \smallbreak } {\par\noindent\hrule} { \smallbreak }
 Electronics Engineer Certification, Foshan city, Aug 2008
+
+{ \medbreak } { \FFdd
+Teamwork
+}
+{ \smallbreak } {\par\noindent\hrule} { \smallbreak }
+%I am a experienced software engineer in digital \& analog circuit design, and embedded system design. 
+Usually I take care of the base framework coding in the teamwork group. When discussing, I am aggressive and creative, trying to find the best solution together. When coding, I am stable and firm. I prefer to provide long term service to the company.
 
 \bye
