--- a/src03_text_to_resume/deng_ya_nuo_resume_2021_0215_2147pm.tex
+++ b/src03_text_to_resume/deng_ya_nuo_resume_2021_0215_2147pm.tex
@@ -17,7 +17,8 @@
 \parindent = 0 pt
 \emergencystretch = 800 em
 %\tolerance=10000
-\baselineskip = 16pt
+%\baselineskip = 16pt
+\baselineskip = 12pt
 
 
 \font\FFaa=      cmb10            at 24pt
@@ -39,8 +40,6 @@ Resume of Yanuo Deng (James)
 (408)444-5520
 *
 deng.ya.nuo@gmail.com
-*
-Cantonese
 }
 
 { \medbreak } { \FFcc
@@ -49,7 +48,13 @@ CAREER OBJECTIVE
 
 { \smallbreak } {\par\noindent\hrule} { \smallbreak }
 
-Focused professional with 15+ years of experience and a proven knowledge of embedded system(linux/RTOS), and digital \& analogy circuit design. Aming to leverage my skills to successfully fill the Integrated Circuit Engineer, Software Engineer, or Network Security Engineer.
+    Focused professional with 15+ years of experience 
+and a proven knowledge of embedded system(linux/RTOS), 
+and digital \& analogy circuit design. 
+    Aming to leverage my skills to be a successfully 
+Integrated Circuit Engineer, 
+Software Engineer, 
+or Network Security Engineer.
 
 { \medbreak } { \FFcc
 EXPERIENCE
@@ -165,13 +170,39 @@ ADDITIONAL SKILLS
 Certifications
 }
 { \smallbreak } {\par\noindent\hrule} { \smallbreak }
-Electronics Engineer Certification, Foshan city, Aug 2008
+Electronics Engineer Certification, Foshan , China , Aug 2008
 
 { \medbreak } { \FFdd
-Teamwork
+Personal Characteristics
 }
 { \smallbreak } {\par\noindent\hrule} { \smallbreak }
 %I am a experienced software engineer in digital \& analog circuit design, and embedded system design. 
-Usually I take care of the base framework coding in the teamwork group. When discussing, I am aggressive and creative, trying to find the best solution together. When coding, I am stable and firm. I prefer to provide long term service to the company.
+%Usually I take care of the base framework coding in the teamwork group. When discussing, I am aggressive and creative, trying to find the best solution together. When coding, I am stable and firm. I prefer to provide long term service to the company.
+I work well within teams and I am assertive and creative 
+    in finding the best solutions for the team.
+I am known to be stable and firm when coding.
+I am committed to achieving goals set for me.
+I speak and write 
+Cantonese/Mandarin.
+
+{ \medbreak } { \FFdd
+Referrals
+}
+{ \smallbreak } {\par\noindent\hrule} { \smallbreak }
+
+Stephen Fung,
+Atheros/Qualcomm , semicodutor Engineer,
+Church members,
+408-338-5175,
+stephen@thepoint.church
+
+Arsenia Harrison,
+One More Chance Company,
+CEO,
+counselor,
+916-271-3054,
+Arseniaharrison@aol.com
+
+\break
 
 \bye
