--- a/src03_text_to_resume/rs_02181536pm_2021_dengyanuo_resume.tex
+++ b/src03_text_to_resume/rs_02181536pm_2021_dengyanuo_resume.tex
@@ -1,5 +1,5 @@
 \special{papersize=8.5in,11.5in}
-% 0.4 padding 
+% 0.4 padding
 \hsize 7.7 in     % 8.5  - 0.4 * 2
 \vsize 10.7 in    % 11.5 - 0.4 * 2
 \voffset -0.6 in  % 1 - 0.4
@@ -8,7 +8,7 @@
 % \hsize 6.9 in     % 8.5  - 0.8 * 2
 % \vsize 9.9 in     % 11.5 - 0.8 * 2
 % \special{papersize=8.5in,11.5in}
-% % 0.4 padding 
+% % 0.4 padding
 % \voffset -0.2 in  % 1 - 0.8
 % \hoffset -0.2 in  % 1 - 0.8
 
@@ -48,12 +48,12 @@ CAREER OBJECTIVE
 
 { \smallbreak } {\par\noindent\hrule} { \smallbreak }
 
-    Focused professional with 15+ years of experience 
-and a proven knowledge of embedded system(linux/RTOS), 
-and digital \& analogy circuit design. 
-    Aming to leverage my skills to be a successfully 
-Integrated Circuit Engineer, 
-Software Engineer, 
+    Focused professional with 15+ years of experience
+and a proven knowledge of embedded system(linux/RTOS),
+and digital \& analogy circuit design.
+    Aming to leverage my skills to be a successfully
+Integrated Circuit Engineer,
+Software Engineer,
 or Network Security Engineer.
 
 { \medbreak } { \FFcc
@@ -69,15 +69,15 @@ C-MATRIXTECH CO.LTD., Zhuhai, China, 3 person R\&D/6
 Integrated Circuit Designer, Dec 2017 - Feb 2019
 }
 
-{ \parindent = 1 em \item{*} 
- Verilog coding, FPGA simulation and debug for self-powered SOC chip. 
+{ \parindent = 1 em \item{*}
+ Verilog coding, FPGA simulation and debug for self-powered SOC chip.
 }
 
-{ \parindent = 1 em \item{*} 
- MCU debug; Port C-language from Assembly for the MCU; Analog circuit design.
+{ \parindent = 1 em \item{*}
+ MCU debug; Port C-language from Assembly for the MCU; Analog circuit design
 }
-{ \parindent = 1 em \item{*} 
- Achieved self-powered MCU SOC used on iPhone data cables; Mass production 10 per month.
+{ \parindent = 1 em \item{*}
+ Achieved self-powered MCU SOC used on iPhone data cables; Mass production 10k/M
 }
 
 { \medbreak } { \FFdd
@@ -88,11 +88,11 @@ VIOMI CO.LTD., Foshan, China, 3 person R\&D/200
 Software (Firmware) Engineer, May 2017 - Oct 2017
 }
 
-{ \parindent = 1 em \item{*} 
- Linux driver for the wifi chip; Speech Recognition App for Linux.
+{ \parindent = 1 em \item{*}
+ Linux driver for the wifi chip; Speech Recognition App for Linux
  }
-{ \parindent = 1 em \item{*} 
- Achieved smart wireless Speech Recognition module ; Mass production 3k per month.
+{ \parindent = 1 em \item{*}
+ Achieved smart wireless Speech Recognition module ; Mass production 3k/M
  }
 
 { \medbreak } { \FFdd
@@ -102,8 +102,8 @@ BLUEWAY CO.LTD., Huizhou, China, 5 person R\&D/2500
 { \FFee
 Software (Firmware) Engineer, May 2016 - Apr 2017
 }
-{ \parindent = 1 em \item{*} 
- FreeRTOS system migration for the embedded board, target for electric mowers.
+{ \parindent = 1 em \item{*}
+ FreeRTOS system migration for the embedded board, target for electric mowers
  }
 
 { \medbreak } { \FFdd
@@ -113,8 +113,8 @@ ADON CO.LTD., Foshan, China, 3 person R\&D/350
 { \FFee
 Software (Firmware) Engineer, Oct 2013 - Dec 2015
 }
-{ \parindent = 1 em \item{*} 
- Linux driver \& app for the Homepod (wifi speaker/charger for iPhone); Mass production, 3k per month.
+{ \parindent = 1 em \item{*}
+ Linux driver \& app for the Homepod (wifi speaker/charger for iPhone); Mass production, 3k/M
  }
 
 { \medbreak } { \FFdd
@@ -124,8 +124,8 @@ SKYIT SOFTWARE CO.LTD., Shunde, China, 5 person R\&D/500
 { \FFee
 Software Engineer, Dec 2011 - Jul 2013
 }
-{ \parindent = 1 em \item{*} 
- Windows Client App by C\#; Data API by C for the first order a meal App in China
+{ \parindent = 1 em \item{*}
+ Windows Client App by C\#; Data API by C for the first order a meal Android App in China
  }
 
 { \medbreak } { \FFdd
@@ -135,14 +135,15 @@ VBRIDGE MICROSYSTEM INC, San Jose, CA, 5 person R\&D/12
 { \FFee
 Digital Integrated Circuit Engineer, Apr 2005 - May 2008
 }
-{ \parindent = 1 em \item{*} 
- AES, DES, 3DES, MD5, SHA1, CRC : IP cores for the security engineer. 
+{ \parindent = 1 em \item{*}
+ IP cores for the security engineer:
+ AES, DES, 3DES, MD5, SHA1, CRC
  }
-{ \parindent = 1 em \item{*} 
- 5 bit MCU for the dual-MIPS SOC chip
+{ \parindent = 1 em \item{*}
+ 5 bits MCU for the dual-MIPS SOC chip
  }
-{ \parindent = 1 em \item{*} 
- All IP cores include specification, testbench, RTL; All IP cores verified by the SOC Chip
+{ \parindent = 1 em \item{*}
+All IP cores verified by the SOC Chip
  }
 
 { \medbreak } { \FFdd
@@ -159,10 +160,10 @@ Master of Science (M.S.) Microelectronics \& Solidstate Electronics (Apr 2005)
 ADDITIONAL SKILLS
 }
 { \smallbreak } {\par\noindent\hrule} { \smallbreak }
-{ \parindent = 1 em \item{*} 
+{ \parindent = 1 em \item{*}
  C, Verilog, Vim, Bash, Perl, Go-language, Gnumake, git
  }
-{ \parindent = 1 em \item{*} 
+{ \parindent = 1 em \item{*}
  Linux / FreeRTOS driver
  }
 
@@ -176,13 +177,13 @@ Electronics Engineer Certification, Foshan , China , Aug 2008
 Personal Characteristics
 }
 { \smallbreak } {\par\noindent\hrule} { \smallbreak }
-%I am a experienced software engineer in digital \& analog circuit design, and embedded system design. 
+%I am a experienced software engineer in digital \& analog circuit design, and embedded system design.
 %Usually I take care of the base framework coding in the teamwork group. When discussing, I am aggressive and creative, trying to find the best solution together. When coding, I am stable and firm. I prefer to provide long term service to the company.
-I work well within teams and I am assertive and creative 
+I work well within teams and I am assertive and creative
     in finding the best solutions for the team.
 I am known to be stable and firm when coding.
 I am committed to achieving goals set for me.
-I speak and write 
+I speak and write
 Cantonese/Mandarin.
 
 { \medbreak } { \FFdd
