--- a/src03_text_to_resume/cv_02231010am_common_2021_dengyanuo_cover_letter.tex
+++ b/src03_text_to_resume/cv_02231010am_common_2021_dengyanuo_cover_letter.tex
@@ -73,17 +73,21 @@ deng.ya.nuo@gmail.com
 { \medbreak } { 
 }
 
-{ \medbreak } { 
-Shawn Taylor
-}
+%{ \medbreak } { 
+%Shawn Taylor
+%}
+%
+%Associate Director at Microchip Technology, Roseville, CA
+%
+%\vskip 30pt
 
-Associate Director at Microchip Technology, Roseville, CA
+%{ \medbreak } 
+%\vskip 10pt
+{ \bigbreak } 
 
-\vskip 30pt
-
-{ \medbreak } 
 { 
-Dear Shawn Taylor,
+%Dear Shawn Taylor,
+Dear Hiring Manager
 }
 
 { \bigbreak } 
