--- a/src03_text_to_resume/rs_02152147pm_2021_dengyanuo_resume.tex
+++ b/src03_text_to_resume/rs_02152147pm_2021_dengyanuo_resume.tex
@@ -191,7 +191,7 @@ Referrals
 { \smallbreak } {\par\noindent\hrule} { \smallbreak }
 
 Stephen Fung,
-Atheros/Qualcomm , semicodutor Engineer,
+Atheros/Qualcomm , semicondutor Engineer,
 Church members,
 408-338-5175,
 stephen@thepoint.church
