--- a/src03_text_to_resume/rs_02181536pm_2021_dengyanuo_resume.tex
+++ b/src03_text_to_resume/rs_02181536pm_2021_dengyanuo_resume.tex
@@ -51,7 +51,7 @@ CAREER OBJECTIVE
     Focused professional with 15+ years of experience
 and a proven knowledge of embedded system(linux/RTOS),
 and digital \& analogy circuit design.
-    Aming to leverage my skills to be a successfully
+    Aiming to leverage my skills to be a successfully
 Integrated Circuit Engineer,
 Software Engineer,
 or Network Security Engineer.
@@ -62,7 +62,7 @@ EXPERIENCE
 { \smallbreak } {\par\noindent\hrule} { \smallbreak }
 
 { \medbreak } { \FFdd
-C-MATRIXTECH CO.LTD., Zhuhai, China, 3 person R\&D/6
+C-MATRIXTECH CO.LTD., Zhuhai, China, 3 people R\&D/6
 }
 
 { \FFee
@@ -81,7 +81,7 @@ Integrated Circuit Designer, Dec 2017 - Feb 2019
 }
 
 { \medbreak } { \FFdd
-VIOMI CO.LTD., Foshan, China, 3 person R\&D/200
+VIOMI CO.LTD., Foshan, China, 3 people R\&D/200
 }
 
 { \FFee
@@ -89,14 +89,14 @@ Software (Firmware) Engineer, May 2017 - Oct 2017
 }
 
 { \parindent = 1 em \item{*}
- Linux driver for the wifi chip; Speech Recognition App for Linux
+ Linux driver for the Wi-Fi chip; Speech Recognition App for Linux
  }
 { \parindent = 1 em \item{*}
  Achieved smart wireless Speech Recognition module ; Mass production 3k/M
  }
 
 { \medbreak } { \FFdd
-BLUEWAY CO.LTD., Huizhou, China, 5 person R\&D/2500
+BLUEWAY CO.LTD., Huizhou, China, 5 people R\&D/2500
 }
 
 { \FFee
@@ -107,18 +107,18 @@ Software (Firmware) Engineer, May 2016 - Apr 2017
  }
 
 { \medbreak } { \FFdd
-ADON CO.LTD., Foshan, China, 3 person R\&D/350
+ADON CO.LTD., Foshan, China, 3 people R\&D/350
 }
 
 { \FFee
 Software (Firmware) Engineer, Oct 2013 - Dec 2015
 }
 { \parindent = 1 em \item{*}
- Linux driver \& app for the Homepod (wifi speaker/charger for iPhone); Mass production, 3k/M
+ Linux driver \& app for the Homepod (Wi-Fi speaker/charger for iPhone); Mass production, 3k/M
  }
 
 { \medbreak } { \FFdd
-SKYIT SOFTWARE CO.LTD., Shunde, China, 5 person R\&D/500
+SKYIT SOFTWARE CO.LTD., Shunde, China, 5 people R\&D/500
 }
 
 { \FFee
@@ -129,7 +129,7 @@ Software Engineer, Dec 2011 - Jul 2013
  }
 
 { \medbreak } { \FFdd
-VBRIDGE MICROSYSTEM INC, San Jose, CA, 5 person R\&D/12
+VBRIDGE MICROSYSTEM INC, San Jose, CA, 5 people R\&D/12
 }
 
 { \FFee
@@ -153,7 +153,7 @@ EDUCATION
 XI'AN university of technology, Xi'an city, Shannxi, China
 
 { \FFee
-Master of Science (M.S.) Microelectronics \& Solidstate Electronics (Apr 2005)
+Master of Science (M.S.) Microelectronics \& Solid State Electronics (Apr 2005)
 }
 
 { \medbreak } { \FFdd
@@ -179,7 +179,7 @@ Personal Characteristics
 { \smallbreak } {\par\noindent\hrule} { \smallbreak }
 %I am a experienced software engineer in digital \& analog circuit design, and embedded system design.
 %Usually I take care of the base framework coding in the teamwork group. When discussing, I am aggressive and creative, trying to find the best solution together. When coding, I am stable and firm. I prefer to provide long term service to the company.
-I work well within teams and I am assertive and creative
+I work well within teams, and I am assertive and creative
     in finding the best solutions for the team.
 I am known to be stable and firm when coding.
 I am committed to achieving goals set for me.
@@ -191,18 +191,25 @@ Referrals
 }
 { \smallbreak } {\par\noindent\hrule} { \smallbreak }
 
+Dan Teuthorn, 
+Teledyne microwave solutions, VP engineering,
+408-421-7303,
+Den.Teuthorn@teledyne.com
+
 Stephen Fung,
-Atheros/Qualcomm , semicodutor Engineer,
-Church members,
+Atheros/Qualcomm , semicondutor Engineer,
 408-338-5175,
 stephen@thepoint.church
 
-Arsenia Harrison,
-One More Chance Company,
-CEO,
-counselor,
-916-271-3054,
-Arseniaharrison@aol.com
+% Arsenia Harrison,
+% One More Chance Company, CEO,
+% 916-271-3054,
+% Arseniaharrison@aol.com
+
+Khinmien Chong, 
+STATS ChipPAC Ltd.,
+408-819-8676,
+khinmienchong@gmail.com
 
 \break
 
