--- a/src03_text_to_resume/cv_02231010am_common_2021_dengyanuo_cover_letter.tex
+++ b/src03_text_to_resume/cv_02231010am_common_2021_dengyanuo_cover_letter.tex
@@ -117,7 +117,7 @@ and prototyping using Xilinx/Altera FPGA boards.
 
 { \bigbreak } 
 I hope my background meets your needs and I look
-forward to elaborating on how my specific skills and abilities will benefit Microchip Technology.
+forward to elaborating on how my specific skills and abilities will benefit your company.
 
 { \bigbreak } 
 I can be contacted at deng.ya.nuo@gmail.com
