--- a/src03_text_to_resume/cv_02231010am_2021_dengyanuo_cover_letter_asic_engineer.tex
+++ b/src03_text_to_resume/cv_02231010am_2021_dengyanuo_cover_letter_asic_engineer.tex
@@ -91,7 +91,7 @@ Dear Hiring Manager
 }
 
 { \bigbreak } 
-I am applying for the position of ``Tech Staff Engineer-ASIC Design '' position in your esteemed company.
+I am applying for the position of ``ASIC Engineer'' position in your esteemed company.
 
 { \bigbreak } 
 I believe I am the right candidate for the position as I have a MSc in Microelectronics \& Solid State Electronics.
