--- a/src03_text_to_resume/cv_02181824pm_pasco_2021_dengyanuo_cover_letter.tex
+++ b/src03_text_to_resume/cv_02181824pm_pasco_2021_dengyanuo_cover_letter.tex
@@ -12,11 +12,17 @@
 % \voffset -0.2 in  % 1 - 0.8
 % \hoffset -0.2 in  % 1 - 0.8
 
-% 0 padding 
-\hsize 6.5 in     % 8.5  - 1 * 2
-\vsize 9.5 in     % 11.5 - 1 * 2
-\voffset 0 in  % 1 - 0
-\hoffset 0 in  % 1 - 0
+% % 0 padding 
+% \hsize 6.5 in     % 8.5  - 1 * 2
+% \vsize 9.5 in     % 11.5 - 1 * 2
+% \voffset 0 in  % 1 - 0
+% \hoffset 0 in  % 1 - 0
+
+% 0.7 padding
+\hsize 7.1 in     % 8.5  - 0.7 * 2
+\vsize 10.1 in    % 11.5 - 0.7 * 2
+\voffset -0.3 in  % 1 - 0.7
+\hoffset -0.3 in  % 1 - 0.7
 
 \nopagenumbers
 
