--- a/src03_text_to_resume/rs_02152147pm_2021_dengyanuo_resume.tex
+++ b/src03_text_to_resume/rs_02152147pm_2021_dengyanuo_resume.tex
@@ -1,9 +1,15 @@
 \special{papersize=8.5in,11.5in}
-% 0.4 padding 
-\hsize 7.7 in     % 8.5  - 0.4 * 2
-\vsize 10.7 in    % 11.5 - 0.4 * 2
-\voffset -0.6 in  % 1 - 0.4
-\hoffset -0.6 in  % 1 - 0.4
+% % 0.4 padding 
+% \hsize 7.7 in     % 8.5  - 0.4 * 2
+% \vsize 10.7 in    % 11.5 - 0.4 * 2
+% \voffset -0.6 in  % 1 - 0.4
+% \hoffset -0.6 in  % 1 - 0.4
+
+% 0.7 padding
+\hsize 7.1 in     % 8.5  - 0.7 * 2
+\vsize 10.1 in    % 11.5 - 0.7 * 2
+\voffset -0.3 in  % 1 - 0.7
+\hoffset -0.3 in  % 1 - 0.7
 
 % \hsize 6.9 in     % 8.5  - 0.8 * 2
 % \vsize 9.9 in     % 11.5 - 0.8 * 2
@@ -22,7 +28,8 @@
 
 
 \font\FFaa=      cmb10            at 24pt
-\font\FFbb=      cmr10            at 8.5pt
+%\font\FFbb=      cmr10            at 8.5pt
+\font\FFbb=      cmr10            at 11pt
 \font\FFcc=      cmb10            at 13pt
 \font\FFdd=      cmb10            at 13pt
 \font\FFee=      cmti10           at 13pt
