--- a/src03_text_to_resume/cv_02181824pm_pasco_2021_dengyanuo_cover_letter.tex
+++ b/src03_text_to_resume/cv_02181824pm_pasco_2021_dengyanuo_cover_letter.tex
@@ -93,7 +93,7 @@ Dear Shawn Taylor,
 }
 
 { \bigbreak } 
-I am applying for the position of ``Tech Staff Engineer-ASIC Design '' position in your esteemed company.
+I am applying for the position of ``Tech Staff Engineer-ASIC Design '' in your esteemed company.
 
 { \bigbreak } 
 I believe I am the right candidate for the position as I have a MSc in Microelectronics \& Solid State Electronics.
@@ -123,7 +123,7 @@ forward to elaborating on how my specific skills and abilities will benefit Micr
 
 { \bigbreak } 
 I can be contacted at deng.ya.nuo@gmail.com
-or text to (408)444-5520 to arrange for a convenient time to meet.
+or call (408)444-5520 to arrange for a convenient time to meet.
 
 { \bigbreak } 
 
