--- a/src03_text_to_resume/cv_02231010am_2021_dengyanuo_cover_letter_asic_engineer.tex
+++ b/src03_text_to_resume/cv_02231010am_2021_dengyanuo_cover_letter_asic_engineer.tex
@@ -98,7 +98,7 @@ Dear Hiring Manager
 }
 
 { \bigbreak } 
-I am applying for the position of ``ASIC Engineer'' position in your esteemed company.
+I am applying for the position of ``ASIC Engineer'' in your esteemed company.
 
 { \bigbreak } 
 I believe I am the right candidate for the position as I have a MSc in Microelectronics \& Solid State Electronics.
@@ -128,7 +128,7 @@ forward to elaborating on how my specific skills and abilities will benefit your
 
 { \bigbreak } 
 I can be contacted at deng.ya.nuo@gmail.com
-or text to (408)444-5520 to arrange for a convenient time to meet.
+or call (408)444-5520 to arrange for a convenient time to meet.
 
 { \bigbreak } 
 
