--- a/src03_text_to_resume/cv_02231010am_2021_dengyanuo_cover_letter_asic_engineer.tex
+++ b/src03_text_to_resume/cv_02231010am_2021_dengyanuo_cover_letter_asic_engineer.tex
@@ -128,7 +128,7 @@ forward to elaborating on how my specific skills and abilities will benefit your
 
 { \bigbreak } 
 I can be contacted at deng.ya.nuo@gmail.com
-or call (408)444-5520 to arrange for a convenient time to meet.
+or (408)444-5520 to arrange for a convenient time to meet.
 
 { \bigbreak } 
 
