--- a/src03_text_to_resume/cv_02181824pm_pasco_2021_dengyanuo_cover_letter.tex
+++ b/src03_text_to_resume/cv_02181824pm_pasco_2021_dengyanuo_cover_letter.tex
@@ -123,7 +123,7 @@ forward to elaborating on how my specific skills and abilities will benefit Micr
 
 { \bigbreak } 
 I can be contacted at deng.ya.nuo@gmail.com
-or call (408)444-5520 to arrange for a convenient time to meet.
+or (408)444-5520 to arrange for a convenient time to meet.
 
 { \bigbreak } 
 
