--- a/src03_text_to_resume/rs_02152147pm_2021_dengyanuo_resume.tex
+++ b/src03_text_to_resume/rs_02152147pm_2021_dengyanuo_resume.tex
@@ -210,6 +210,11 @@ counselor,
 916-271-3054,
 Arseniaharrison@aol.com
 
+{ \medbreak } 
+{ % \FFdd
+USA Employment Authorization Document(EAD) valided from Feb 2021 to Feb 2023.
+}
+
 \break
 
 \bye
