--- a/src03_text_to_resume/rs_02181536pm_2021_dengyanuo_resume.tex
+++ b/src03_text_to_resume/rs_02181536pm_2021_dengyanuo_resume.tex
@@ -204,6 +204,12 @@ Teledyne microwave solutions, VP engineering,
 408-421-7303,
 Den.Teuthorn@teledyne.com
 
+Tang Shanqiang,
+Cadence,
+Principal Application Engineer,
+ansent@cadence.com,
++65-90546301
+
 Stephen Fung,
 Atheros/Qualcomm , semicondutor Engineer,
 408-338-5175,
@@ -214,10 +220,15 @@ stephen@thepoint.church
 % 916-271-3054,
 % Arseniaharrison@aol.com
 
-Khinmien Chong, 
-STATS ChipPAC Ltd.,
-408-819-8676,
-khinmienchong@gmail.com
+% Khinmien Chong, 
+% STATS ChipPAC Ltd.,
+% 408-819-8676,
+% khinmienchong@gmail.com
+
+{ \medbreak } 
+{ % \FFdd
+USA Employment Authorization Document(EAD) valided from Feb 2021 to Feb 2023.
+}
 
 \break
 
