--- a/src03_text_to_resume/rs_0224_0952am_2021_dengyanuo_resume.tex
+++ b/src03_text_to_resume/rs_0224_0952am_2021_dengyanuo_resume.tex
@@ -144,14 +144,15 @@ VBRIDGE MICROSYSTEM INC, San Jose, CA, 5 people R\&D/12
 Digital Integrated Circuit Engineer, Apr 2005 - May 2008
 }
 { \parindent = 1 em \item{*}
- IP cores for the security engineer:
- AES, DES, 3DES, MD5, SHA1, CRC
+ IP cores for the security engineer(
+ AES, DES, 3DES, MD5, SHA1, CRC);
+ 5 bits MCU for the dual-MIPS SOC chip.
  }
 { \parindent = 1 em \item{*}
- 5 bits MCU for the dual-MIPS SOC chip
+All IP cores were tapout in a dual-MIPS SOC Chip.
  }
 { \parindent = 1 em \item{*}
-All IP cores verified by the SOC Chip
+Linux + Vxworks board support package(BSP) was built for the dual-MIPS.
  }
 
 { \medbreak } { \FFdd
