--- a/src03_text_to_resume/rs_02240952am_2021_dengyanuo_resume.tex
+++ b/src03_text_to_resume/rs_02240952am_2021_dengyanuo_resume.tex
@@ -111,7 +111,7 @@ BLUEWAY CO.LTD., Huizhou, China, 5 people R\&D/2500
 Software (Firmware) Engineer, May 2016 - Apr 2017
 }
 { \parindent = 1 em \item{*}
- FreeRTOS system migration for the embedded board, target for electric mowers
+ FreeRTOS system migration to STM32 for the embedded board, target for electric mowers
  }
 
 { \medbreak } { \FFdd
@@ -144,15 +144,15 @@ VBRIDGE MICROSYSTEM INC, San Jose, CA, 5 people R\&D/12
 Digital Integrated Circuit Engineer, Apr 2005 - May 2008
 }
 { \parindent = 1 em \item{*}
- IP cores for the security engineer(
- AES, DES, 3DES, MD5, SHA1, CRC);
- 5 bits MCU for the dual-MIPS SOC chip.
+ IP cores of security engineer :
+ AES, DES, 3DES, MD5, SHA1, CRC ;
+ 5-bits MCU core.
  }
 { \parindent = 1 em \item{*}
-All IP cores were tapout in a dual-MIPS SOC Chip.
+All IP cores tapout in a dual-MIPS SOC Chip.
  }
 { \parindent = 1 em \item{*}
-Linux + Vxworks board support package(BSP) was built for the dual-MIPS.
+Linux + VxWorks board support package(BSP) was built for the dual-MIPS.
  }
 
 { \medbreak } { \FFdd
@@ -229,6 +229,7 @@ stephen@thepoint.church
 { \medbreak } 
 { % \FFdd
 USA Employment Authorization Document(EAD) valided from Feb 2021 to Feb 2023.
+No work sponsor is needed.
 }
 
 \break
