--- a/src03_text_to_resume/cv_02181824pm_microchip_2021_dengyanuo_cover_letter.tex
+++ b/src03_text_to_resume/cv_02181824pm_microchip_2021_dengyanuo_cover_letter.tex
@@ -18,6 +18,7 @@
 % \voffset 0 in  % 1 - 0
 % \hoffset 0 in  % 1 - 0
 
+
 % 0.7 padding
 \hsize 7.1 in     % 8.5  - 0.7 * 2
 \vsize 10.1 in    % 11.5 - 0.7 * 2
@@ -79,21 +80,29 @@ deng.ya.nuo@gmail.com
 { \medbreak } { 
 }
 
-{ \medbreak } { 
-Shawn Taylor
-}
+%{ \medbreak } { 
+%Shawn Taylor
+%}
+%
+%Associate Director at Microchip Technology, Roseville, CA
+%
+%\vskip 30pt
 
+%{ \medbreak } 
+%\vskip 10pt
+{ \bigbreak } 
+
+
+Shawn Taylor
 Associate Director at Microchip Technology, Roseville, CA
 
-\vskip 30pt
-
-{ \medbreak } 
 { 
 Dear Shawn Taylor,
+%Dear Hiring Manager
 }
 
 { \bigbreak } 
-I am applying for the position of ``Tech Staff Engineer-ASIC Design '' in your esteemed company.
+I am applying for the position of `` Tech Staff Engineer-ASIC Design'' in your esteemed Microchip company.
 
 { \bigbreak } 
 I believe I am the right candidate for the position as I have a MSc in Microelectronics \& Solid State Electronics.
@@ -113,13 +122,16 @@ with the SOC passing at first tapeout
 with a US patent US7356671B1 awarded.
 
 { \bigbreak } 
-I am also experienced as an embedded engineer using Linux + VxWorks, 
+I am also experienced at using Linux / VxWorks, 
 analogy simulatinon tool Hspice, 
 and prototyping using Xilinx/Altera FPGA boards.
 
 { \bigbreak } 
+I have experiences at Linux kernel trimming, bootloader coding, embedded Linux systems porting at ARM/MIPS, and FreeRTOS porting at STM32.
+
+{ \bigbreak } 
 I hope my background meets your needs and I look
-forward to elaborating on how my specific skills and abilities will benefit Microchip Technology.
+forward to elaborating on how my specific skills and abilities will benefit your Microchip company.
 
 { \bigbreak } 
 I can be contacted at deng.ya.nuo@gmail.com
